force-app/main/default/objects/Module_Progress__c/Module_Progress__c.object-meta.xml
<CustomObject>
    <label>Module Progress</label>
    <nameField>
        <label>Module Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Module Progresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>