force-app/main/default/objects/Module_Progress__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF( Module__r.Total_Units__c  &gt; 0, Unit_Progress_Check__c / Module__r.Total_Units__c * 100, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>