force-app/main/default/objects/Module_Progress__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <label>Total Points</label>
    <summarizedField>Unit_Progress__c.Points_Obtained__c</summarizedField>
    <summaryForeignKey>Unit_Progress__c.Module_Progress__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>