force-app/main/default/objects/Module_Progress__c/fields/Unit_Progress_Check__c.field-meta.xml
<CustomField>
    <fullName>Unit_Progress_Check__c</fullName>
    <label>Unit Progress Check</label>
    <summaryFilterItems>
        <field>Unit_Progress__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit_Progress__c.Module_Progress__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>